Fix line breaks in chats

--- a/src/styles.css
+++ b/src/styles.css
@@ -157,8 +157,7 @@ li {
 }
 
 .chat-window .message {
-  width: max-content;
-  max-width: 100%;
+  width: 100%;
   box-sizing: border-box;
   word-wrap: break-word;
   margin: 1em 0;
